import { compileShader } from "./compiler"
import { $ } from "./expressions"
import { glslRepresentation } from "./glslRepresentation"
import { Float, Value, Unit } from "./units"

const glsl = glslRepresentation

describe("Node", () => {
	it("creates a node of the specified type and value", () => {
		const v = Unit("float", 1)
		expect(v.type).toBe("float")
		expect(v.value).toBe(1)
		expect(glsl(v.value)).toBe("1.0")
	})

	it("supports string values (which will be used as verbatim expressions)", () => {
		const v = Unit("vec3", $`vec3(1.0, 1.0, 1.0)`)
		expect(glsl(v.value)).toBe("vec3(1.0, 1.0, 1.0)")
	})

	it("supports expression values", () => {
		const a = Float(1)
		const v = Unit("vec3", $`vec3(${a}, 1.0, 1.0)`)
		expect(glsl(v.value)).toBe(`vec3(${a._unitConfig.variableName}, 1.0, 1.0)`)
	})

	it("allows nodes to directly reference other nodes", () => {
		const source = Float(1)
		const v = Float(source)
		expect(v.value).toBe(source)
		expect(glsl(v.value)).toBe(source._unitConfig.variableName)
	})

	it("supports a 'varying' flag that will automatically make it pass its data as a varying", () => {
		const v = Unit(
			"float",
			$`1.0 + 2.0 + onlyAvailableInVertex.x`, // a value expression that can only work in a vertex shader
			{
				name: "A variable with a varying",
				varying: true,
				vertex: { body: $`value += 3.0;` } // Modiyfing the value before it gets put into the varying
			}
		)

		const [c] = compileShader(v)

		expect(c.vertexShader).toMatchSnapshot()
		expect(c.fragmentShader).toMatchSnapshot()
	})

	it("supports constructing nodes through constructor functions", () => {
		const Double = (f: Value<"float">) => Float($`(${f}) * 2.0`)
		const v = Double(1)
		expect(glsl(v.value)).toBe("(1.0) * 2.0")
	})

	it("constructor functions can pass string values as expressions", () => {
		const Double = (f: Value<"float">) => Float($`(${f}) * 2.0`)
		const v = Double($`5.0`)
		expect(glsl(v.value)).toBe(`(5.0) * 2.0`)
	})

	it("constructor functions can pass references to other nodes", () => {
		const Double = (f: Value<"float">) => Float($`(${f}) * 2.0`)
		const a = Float(1)
		const v = Double(a)
		expect(glsl(v.value)).toBe(`(${a._unitConfig.variableName}) * 2.0`)
	})

	it("constructor functions can pass expression values to other nodes", () => {
		const Double = (f: Value<"float">) => Float($`(${f}) * 2.0`)
		const a = Float(5)
		const v = Double($`${a} + 5.0`)
		expect(glsl(v.value)).toBe(`(${a._unitConfig.variableName} + 5.0) * 2.0`)
	})
})
